# ML-Challenge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  ML Junior Practical Test.docx  README.md  TROUBLESHOOTING.md  UPGRADE_SUMMARY.md  data_processing.py  docker-compose.yml  evaluation.py  main.py  pyproject.toml  requirements-basic.txt  requirements-python313.txt  requirements.txt  visualization.py
.github/workflows/: ci.yml
scripts/: install_minimal.py  run_tests.py  setup_dev.py  setup_windows.py  test_installation.py
src/: __init__.py
src/ml_challenge/: __init__.py  main.py
src/ml_challenge/config/: config.yaml
src/ml_challenge/models/: __init__.py  classification.py  evaluation.py
src/ml_challenge/utils/: data_processing.py  logger.py  visualization.py
tests/: __init__.py  test_data_processing.py
